@@ -3,6 +3,8 @@ Version 1.7.8
        from Log window fails. (Stefan)
 - BUG: Issue #299: crash in repobrowser
        when refreshing. (Stefan)
+- BUG: Issue #301: Crash in log dialog when
+       selecting all revisions with Ctrl-A. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
